# nicegui-nutrition-manager

./: Dockerfile  LICENSE.md  README.md  diagram.excalidraw  pyproject.toml
.github/workflows/: pub_docker_image.yml
nicegui_nutrition_manager/: Dockerfile  main.py
nicegui_nutrition_manager/src/: playwright_scraping.py  ui_elements.py  utils.py
nicegui_nutrition_manager/src/db/: schema_dtclass.py  supabase_func.py
