[tool.poetry]
name = "nicegui-nutrition-manager"
version = "0.1.0"
description = ""
authors = ["Tatsuya Tomita <tat@seriousexplosion.net>"]
readme = "README.md"
packages = [{include = "nicegui_nutrition_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.2.14"
playwright = "^1.33.0"
asyncio = "^3.4.3"
selectolax = "^0.3.13"
supabase = "^1.0.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
